--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -106,6 +106,7 @@
   align-items: center; /* 水平居中对齐 */
   justify-content: center; /* 垂直居中对齐 */
   text-align: center; /* 使名字和其他文本居中对齐 */
+  margin-bottom: 20px;
 }
 
 .author__content {
