--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -76,29 +76,30 @@
    Author profile and links
    ========================================================================== */
 
-.author__avatar {
-  display: table-cell;
-  vertical-align: top;
-  width: 36px;
-  // set width only, for non-square avatars
-  // height: 36px;
-
-  @include breakpoint($large) {
-    display: block;
-    width: auto;
-    height: auto;
-  }
-
-  img {
-    max-width: 175px;
-    border-radius: 50%;
-
+   .author__avatar {
+    display: table-cell;
+    vertical-align: top;
+    width: 36px;
+  
     @include breakpoint($large) {
-      padding: 5px;
-      border: 1px solid $border-color;
+      display: block;
+      width: auto;
+      height: auto;
+    }
+  
+    img {
+      width: 175px; /* 强制设置宽度和高度相等 */
+      height: 175px; /* 确保图片是正方形 */
+      object-fit: cover; /* 裁剪图片，保证填充整个容器 */
+      border-radius: 50%; /* 保证图片显示为圆形 */
+      
+      @include breakpoint($large) {
+        padding: 5px;
+        border: 1px solid $border-color;
+      }
     }
   }
-}
+  
 
 .avatar__name {
   display: flex;
