--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -88,10 +88,10 @@
     }
   
     img {
-      width: 175px; /* 强制设置宽度和高度相等 */
-      height: 175px; /* 确保图片是正方形 */
-      object-fit: cover; /* 裁剪图片，保证填充整个容器 */
-      border-radius: 50%; /* 保证图片显示为圆形 */
+      width: 175px;
+      height: 175px;
+      object-fit: cover;
+      border-radius: 50%;
       
       @include breakpoint($large) {
         padding: 5px;
@@ -103,10 +103,10 @@
 
 .avatar__name {
   display: flex;
-  flex-direction: column; /* 垂直排列头像和名字 */
-  align-items: center; /* 水平居中对齐 */
-  justify-content: center; /* 垂直居中对齐 */
-  text-align: center; /* 使名字和其他文本居中对齐 */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   margin-bottom: 20px;
 }
 
